# RustCraftClassic

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/core/: core.rs  map.rs  mod.rs  network.rs  player.rs  util.rs  world.rs
src/core/events/: mod.rs  player.rs  server.rs  world.rs
src/core/maps/: mcsharp.rs  memorymap.rs  mod.rs
src/network/: classic_client.rs  classic_server.rs  cpe.rs  mod.rs  packet.rs
