[package]
name = "rcclassic"
version = "0.1.31"
authors = ["Ali Deym <self@deym.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rcclassic"
path = "src/main.rs"

[dependencies]

threadpool = "1.8"
num_cpus = "1.13"
dashmap = "3.11"
flate2 = "1.0"