[package]
name = "rcclassic"
version = "0.2.0"
authors = ["Ali Deym <self@deym.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rcclassic"
path = "src/main.rs"

[dependencies]

threadpool = "1.8"
num_cpus = "1.13"
chashmap = "2.2"
flate2 = "1.0"
chrono = "0.4"